Add all first chapter new words to glossary. Put second figure inside paragraph. Improve introduction and last paragraphs of first chapter.

--- a/thesis/tex/EEG.tex
+++ b/thesis/tex/EEG.tex
@@ -6,7 +6,7 @@ The aim of this chapter is to describe the biology of the brain, discuss how bra
 \section{Source of the electrical activity}
 \label{sec:neuron}
 
-As all living organisms are composed of cells, so are humans and the human brain. The brain consists of nerve cells called \glspl{neuron} and non-neural cells. There are approximately 86 billion \glspl{neuron} in the human brain and roughly as much non-neural cells~\cite{neuroncount}. A typical \gls{neuron} has a cell body, multiple nerve endings or \glspl{dendrite}, and one nerve fibre or \gls{axon}. Both \glspl{dendrite} and \glspl{axon} can branch multiple times. 
+As all living organisms are composed of cells, so are humans and the human brain. The brain consists of nerve cells called \glspl{neuron} and non-neural cells. There are approximately 86 billion \glspl{neuron} in the human brain and roughly as much non-neural cells~\cite{neuroncount}. The aim of this section is to describe how \glspl{neuron} interact with each other and discuss what aspect of this communication can be measured.
 
 \begin{figure}[b!]
 	\centering
@@ -24,17 +24,15 @@ As all living organisms are composed of cells, so are humans and the human brain
 	\caption{The structure of a neuron}
 \end{figure}
 
-Neurons interact with each other via electro-chemical signals that are transmitted through various connections. These connections are not static and can change over time. Functionally related \glspl{neuron} are connected to each other and form neural pathways~\cite{neuralpathway}. The general rule is that a \gls{neuron} sends signals through its \gls{axon} and receives signals through \glspl{dendrite}. The connection between an \gls{axon} and a \gls{dendrite} is called a \gls{synapse}. See figure~\ref{fig:neuron_synapse} for an example of \glspl{neuron} and a \gls{synapse}.
+A typical \gls{neuron} has a cell body, multiple nerve endings or \glspl{dendrite}, and one nerve fibre or \gls{axon}. Both \glspl{dendrite} and \glspl{axon} can branch multiple times. \Glspl{neuron} interact with each other via electro-chemical signals that are transmitted through various connections. These connections are not static and can change over time. The connection between an \gls{axon} and a \gls{dendrite} is called a \gls{synapse}. See figure~\ref{fig:neuron_synapse} for an example of \glspl{neuron} and a \gls{synapse}. The general rule is that a \gls{neuron} sends signals through its \gls{axon} and receives signals through \glspl{dendrite}. Functionally related \glspl{neuron} are connected to each other and form \glspl{neural pathway}~\cite{neuralpathway}.
 
-To send signals, \glspl{neuron} must be able to maintain electric potential called membrane potential. Membrane potential is the difference in electric potential between the interior and the exterior of a cell. When \glspl{neuron} are not sending signals, their membrane potentials are slightly negative. The membrane potential of a \gls{neuron} at a resting state is called resting potential. Negative resting potential is achieved by having more positively charged ions around the cell than inside the cell.
+To send signals, \glspl{neuron} must be able to maintain electric potential called \gls{membrane potential}. \Gls{membrane potential} is the difference in electric potential between the interior and the exterior of a cell. When a \gls{neuron} is not sending signals or in other words, when neuron is at a \gls{resting state}, its \gls{membrane potential} is slightly negative. The \gls{membrane potential} of a \gls{neuron} at a \gls{resting state} is called \gls{resting potential}. Negative \gls{resting potential} is achieved by having more positively charged ions around the cell than inside the cell.
 
-By having stable resting potential, a \gls{neuron} is able to send signals by rapidly increasing and decreasing the membrane potential along an \gls{axon}. Therefore, the signal travelling along an \gls{axon} is actually higher membrane potential. This event is called an action potential. See figure~\ref{fig:action_potential} for illustration. To increase or decrease the membrane potential of a cell, ionophoric proteins are used. These proteins transport ions across the cell membrane to regulate the concentration of ions and membrane potential.
+By having stable \gls{resting potential}, a \gls{neuron} is able to send signals by rapidly increasing and decreasing the \gls{membrane potential} along an \gls{axon}. Therefore, the signal travelling along an \gls{axon} is actually higher potential moving toward \glspl{synapse}. This event is called an \gls{action potential}. See figure~\ref{fig:action_potential} for example. To increase or decrease the \gls{membrane potential} of a cell, \glspl{ionophoric protein} are used. These proteins transport ions across the cell membrane to regulate the concentration of ions inside the cell. Since ions are electrically charged, these proteins can also be used to regulate the \gls{membrane potential} of a cell.
 
-Action potential is initiated by a certain threshold voltage called threshold potential. When the membrane potential of a \gls{neuron} exceeds threshold potential, the \gls{neuron} sends signals to other cells. The \gls{neuron} that receives the signal is called postsynaptic cell. Synaptic input in a postsynaptic cell can cause the membrane potential of the postsynaptic cell to increase or decrease. This change in membrane potential is called a postsynaptic potential and it can cause an action potential in the postsynaptic cell.
+An \gls{action potential} or signal sending is initiated when the \gls{membrane potential} of a \gls{neuron} exceeds certain threshold value called \gls{threshold potential}. The \gls{membrane potential} of a \gls{neuron} can increase when the \gls{neuron} receives signals from other \glspl{neuron}. The \gls{neuron} that receives a signal is called \gls{postsynaptic cell}. The received signal can cause the \gls{membrane potential} of the \gls{postsynaptic cell} to increase or decrease. This change in \gls{membrane potential} is called a \gls{postsynaptic potential}. If the \gls{postsynaptic potential} is large enough for the \gls{membrane potential} to exceed \gls{threshold potential}, an \gls{action potential} is initiated in the \gls{postsynaptic cell}.
 
-The following paragraph is mainly based on article~\cite{electric_field}. Postsynaptic potentials cause small current flows into the cell. To achieve electroneutrality, a balancing current from the interior to the exterior of the cell is needed. Ions enter the cell from a location called sink and flow to the exterior of the cell to a location called source. A sink and a source form a dipole. See figure~\ref{fig:dipole_electric} for illustration.
-
-\begin{figure}[h!]
+The following paragraph is mainly based on the article by Buzsaki \textit{et al.}~\cite{electric_field}. \Glspl{postsynaptic potential} cause small ion flows into the cell. If the entering ions are positively charged,\begin{figure}[h!]
 	\centering
 	\begin{subfigure}{0.48\textwidth}
 		\includegraphics[width=\textwidth]{dipole_neuron.png}
@@ -49,17 +47,16 @@ The following paragraph is mainly based on article~\cite{electric_field}. Postsy
 	\end{subfigure}
 	\caption{Dipoles}
 	\label{fig:dipole}
-\end{figure}
-\footnotetext{http://hyperphysics.phy-astr.gsu.edu/hbase/electric/equipot.html}
+\end{figure}\footnotetext{http://hyperphysics.phy-astr.gsu.edu/hbase/electric/equipot.html} the membrane potential of the cell increases. The location where ions enter the cell is called \gls{sink}. To achieve electroneutrality, a balancing flow from the interior to the exterior of the cell is needed. The location where ions exit the cell is called \gls{source}. A \gls{sink} and a \gls{source} form a \gls{dipole}. See figure~\ref{fig:dipole_electric} for illustration.
 
-These dipoles are important because it is possible to measure the electric field produced by these dipoles from the scalp. See figure~\ref{fig:dipole_neuron} for illustration. Measuring these electric fields is further discussed in section~\ref{sec:EEG}. Although action potentials generate stronger currents than postsynaptic potentials, their duration is short and nearby \glspl{neuron} rarely fire synchronously~\cite{electric_field}. Thus recording the electrical activity of the brain relies on the electric fields of the dipoles generated by \glspl{neuron}.
+These \glspl{dipole} are important because it is possible to measure the electric field produced by these \glspl{dipole} from the scalp. See figure~\ref{fig:dipole_neuron} for illustration. Measuring these electric fields is further discussed in section~\ref{sec:EEG}. Although \glspl{action potential} generate stronger currents than \glspl{postsynaptic potential}, their duration is short and nearby \glspl{neuron} rarely fire synchronously~\cite{electric_field}. Thus recording the electrical activity of the brain mainly relies on the electric fields of the \glspl{dipole} generated by \glspl{neuron}.
 
 \section{Functional neuroimaging methods}
 \label{sec:neuroimaging}
 
 As discussed in section~\ref{sec:neuron}, \glspl{neuron} in the brain are sending electrochemical signals to communicate with each other. There are several techniques available to measure this activity. We will give a brief overview of various methods before continuing to discuss the biological background. Measuring an aspect of brain function is called functional neuroimaging and common measurement methods divide into haemodynamic and electromagnetic techniques.
 
-Haemodynamic techniques measure blood oxygenation and blood flow in the brain. More oxygen has to be delivered to more active brain regions and this allows the brain activity to be measured. Haemodynamic techniques include \gls{fMRI}, \gls{fNIRS}, \gls{PET}.
+Haemodynamic techniques measure blood oxygenation and blood flow in the brain. More oxygen has to be delivered to more active brain regions and this allows the brain activity to be measured. Haemodynamic techniques include \gls{fMRI}, \gls{fNIRS} and \gls{PET}.
 
 Electromagnetic techniques measure either electrical activity or magnetic fields produced by the electrical activity along the scalp. Electromagnetic techniques include \gls{EEG} and \gls{MEG}. These methods have lower temporal resolution than haemodynamic methods, but measure only the activity in the outer layer of the brain. Temporal resolution is the smallest time period of neural activity that is reliably separated out by measuring technique.
 %http://psychcentral.com/lib/types-of-brain-imaging-techniques/0001057
@@ -96,7 +93,9 @@ To decide which method is best for controlling a robot, we will compare cost, po
 \section{Electroencephalography}
 \label{sec:EEG}
 
-As already mentioned in the previous section, \gls{EEG} measures the electrical activity along the scalp. This electrical activity originates mainly from the electric fields generated by \glspl{neuron} as discussed in section~\ref{sec:neuron}. However, the electric potential generated by one \gls{neuron} is far too low to be recognized. Therefore, approximately 108 \glspl{neuron} have to have synchronous electrical activity to a create measurable field~\cite{field_count}. Furthermore, these \glspl{neuron} have to have certain orientation for the electric fields to add up and reach the electrode on the scalp. See figure~\ref{fig:dipole_neuron} for example.
+As already mentioned in the previous section, \gls{EEG} measures the electrical activity along the scalp. This electrical activity originates mainly from the electric fields generated by \glspl{neuron} as discussed in section~\ref{sec:neuron}. The aim of this section is to describe the basics of \gls{EEG} and discuss how brain activity evoked by certain event can be measured using \gls{EEG}.
+
+The electric potential generated by one \gls{neuron} is far too low to be recognized. Therefore, approximately 108 \glspl{neuron} have to have synchronous electrical activity to a create measurable field~\cite{field_count}. Furthermore, these \glspl{neuron} have to have certain orientation for the electric fields to add up and reach the electrode on the scalp. Namely, these neurons need to be perpendicular to the surface of the brain. See figure~\ref{fig:dipole_neuron} for example.
 
 \gls{EEG} measures the potential fields as the function of voltage versus time using electrodes placed on scalp~\cite{field_count}. Since voltage is the electric potential difference between two points, one or more reference electrodes should be used. Then voltmeter can be used to measure the differences in voltage between two electrodes, one of which is the reference electrode. See figure~\ref{fig:voltmeter} for a simplified scheme.
 
@@ -111,7 +110,7 @@ Usually electrodes are placed on the scalp according to international 10-20 elec
 
 In a broad sense, \gls{EEG} recording is linked to the general state of the brain~\cite{VEP}. Therefore, due to the generality of the recording, potentials evoked by certain events cannot be seen in the recording because the evoked potentials are much smaller than the general fluctuations. A brain potential evoked by some event is called \gls{ERP}. 
 
-\glspl{ERP} are linked to the information flow in the brain and are usually recorded by using an averaging technique~\cite{ERP}. For example, \glspl{ERP} can be recorded by presenting a stimulus with a certain time interval to a subject and calculating the average of \gls{EEG} signals recorded in the same time interval. This technique can be used because the stimuli blinks at a constant rate and thus \glspl{ERP} are also evoked one after another in the same constant interval. Therefore, \glspl{ERP} are always evoked at the same time and when calculating the average of the \gls{EEG} recordings divided into same time intervals, the result will be an \gls{ERP} because other fluctuations and noise are random and mostly cancels out in the averaging process. Thus the \glspl{ERP} can be recorded using \gls{EEG}. 
+\glspl{ERP} are linked to the information flow in the brain and are usually recorded by using an averaging technique~\cite{ERP}. For example, \glspl{ERP} can be recorded by presenting a stimulus with a certain time interval to a subject and calculating the average of \gls{EEG} signals recorded in the same time interval. This technique can be used because the stimuli is presented at a constant rate and thus \glspl{ERP} are also evoked one after another in the same constant interval. Therefore, \glspl{ERP} are always evoked at the same time while other fluctuations and noise are mostly random. When calculating the average of the \gls{EEG} recordings divided into the same time intervals as the stimulus presentation, the result will be an \gls{ERP} because other fluctuations and noise mostly cancel out in the averaging process. Thus the \glspl{ERP} can be recorded using \gls{EEG}. 
 
 \section{Visual evoked potential}
 \label{sec:VEP}
