--- a/thesis/tex/SSVEP_BCI.tex
+++ b/thesis/tex/SSVEP_BCI.tex
@@ -1,5 +1,6 @@
 
-\chapter{SSVEP BCI for controlling a robot}
+\chapter{SSVEP-based BCI for controlling a robot}
+\label{SSVEP_BCI}
 \section{Signal pipeline}
 asd
 \section{Target identification}
