--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -38,6 +38,54 @@
 	name = synapse,
 	description = {-- connection between neurons}
 }
+\newglossaryentry{neural pathway}{
+	name = neural pathway,
+	description = {-- network formed by functionally related neurons}
+}
+\newglossaryentry{membrane potential}{
+	name = membrane potential,
+	description = {-- difference between the interior and the exterior of a cell}
+}
+\newglossaryentry{resting state}{
+	name = resting state,
+	description = {-- the state of a neuron that is not exited and not sending signals at the moment}
+}
+\newglossaryentry{resting potential}{
+	name = resting potential,
+	description = {-- the membrane potential of a neuron at a resting state}
+}
+\newglossaryentry{action potential}{
+	name = action potential,
+	description = {-- the event of sending signals used by neurons}
+}
+\newglossaryentry{ionophoric protein}{
+	name = ionophoric protein,
+	description = {-- proteins used to transport ions across cell membrane}
+}
+\newglossaryentry{threshold potential}{
+	name = threshold potential,
+	description = {-- certain threshold value. If membrane potential exceeds threshold potential, action potential is initiated}
+}
+\newglossaryentry{postsynaptic cell}{
+	name = postsynaptic cell,
+	description = {-- a cell that received a signal through synapse. This term is used for example when discussing single action potential and its effect on the cell that receives the signal}
+}
+\newglossaryentry{postsynaptic potential}{
+	name = postsynaptic potential,
+	description = {-- change in the membrane potential in a postsynaptic cell caused by synaptic input}
+}
+\newglossaryentry{sink}{
+	name = sink,
+	description = {-- location where ions enter the postsynaptic cell after synaptic input has been received}
+}
+\newglossaryentry{source}{
+	name = source,
+	description = {-- location where ions exit the postsynaptic cell after synaptic input has been received to achieve electroneutrality}
+}
+\newglossaryentry{dipole}{
+	name = dipole,
+	description = {-- formed by a sink and a source around postsynaptic cell. Dipoles produce electric field that can be measured from the scalp using EEG.}
+}
 
 % Packages for layout testing
 
