Remove personal language from neuroimaging section. Move table in the rigt place. Add words to glossary. Minor changes in EEG section.

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -84,7 +84,23 @@
 }
 \newglossaryentry{dipole}{
 	name = dipole,
-	description = {-- formed by a sink and a source around postsynaptic cell. Dipoles produce electric field that can be measured from the scalp using EEG.}
+	description = {-- formed by a sink and a source around postsynaptic cell. Dipoles produce electric field that can be measured from the scalp using EEG}
+}
+\newglossaryentry{functional neuroimaging}{
+	name = functional neuroimaging,
+	description = {-- measuring an aspect of brain function}
+}
+\newglossaryentry{haemodynamic}{
+	name = haemodynamic,
+	description = {--}
+}
+\newglossaryentry{electromagnetic}{
+	name = electromagnetic,
+	description = {--}
+}
+\newglossaryentry{temporal resolution}{
+	name = temporal resolution,
+	description = {--}
 }
 
 % Packages for layout testing
