--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -102,6 +102,30 @@
 	name = temporal resolution,
 	description = {--}
 }
+\newglossaryentry{visual processing centre}{
+	name = visual processing centre,
+	description = {--}
+}
+\newglossaryentry{primary visual pathway}{
+	name = primary visual pathway,
+	description = {--}
+}
+\newglossaryentry{central visual field}{
+	name = central visual field,
+	description = {--}
+}
+\newglossaryentry{peripheral vision}{
+	name = peripheral vision,
+	description = {--}
+}
+\newglossaryentry{harmonic}{
+	name = harmonic,
+	description = {--}
+}
+\newglossaryentry{flickering}{
+	name = flickering,
+	description = {--}
+}
 
 % Packages for layout testing
 
